fix header on mobile

--- a/web/app/themes/makeict/style.css
+++ b/web/app/themes/makeict/style.css
@@ -67,6 +67,7 @@ body {
 .jumbotron-main h1 {
 	font-size: 48px;
 	margin-top: 0;
+	white-space: nowrap;
 }
 
 .jumbotron-spacer {
@@ -85,6 +86,11 @@ body {
 		background-size: contain;
 		margin-left: 25px !important;
 		margin-top: 0;
+	}
+	
+	.jumbotron-main h1 {
+		margin-top: 1em;
+		font-size: 32px;
 	}
 	
 	.jumbotron-main {
